feat: implementação da interface gráfica (fazer uma reserva e login do admin)