@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.0</version>
+		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -126,6 +126,10 @@
 				<version>0.0.8</version>
 				<configuration>
 					<mainClass>com.example.reservas_restaurantes.ui.MainApplication</mainClass>
+					<options>
+						<option>--add-opens</option>
+						<option>java.base/java.lang=ALL-UNNAMED</option>
+					</options>
 				</configuration>
 			</plugin>
 		</plugins>
